@@ -1,5 +1,17 @@
-- new is_monotonic() needs testing ... move somewhere else? tone.c isn't an
-  obvious place for it
+
+- conv with scale == 0 gives /0 error
+
+- added im_local_imask(), im_local_dmask(), needs docs?
+
+  some of image.h seems to be missing param names
+
+  is local_imask() in the best place? shouldn't it be in mask.h?
+
+- im_tone_analyse() needs docs and testing
+
+  also im_tone_map() 
+
+- im_rotate_imask90 only works for square, odd-sized massks, argh
 
 - lots of stupid little files in hist, eg. im_hsp.c ... paste them into larger 
   modules
